# Triangulum_Vi_01

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.py
triangulum/: .env.example  __init__.py  main.py  requirements.txt  tools_and_plugins.py
